--- a/budget/easy.html
+++ b/budget/easy.html
@@ -180,7 +180,7 @@
     <!-- Accordion -->
     <div class="accordion">
 
-        <!-- SECTION 1 — AGE & INCOME -->
+        <!-- SECTION 1 — AGE & MONTHLY INCOME -->
         <div class="acc-item">
             <div class="acc-header">1. Age & Income <span>+</span></div>
             <div class="acc-body">
@@ -211,27 +211,27 @@
             <div class="acc-body">
                 <div class="cb-row">
                     <div>
-                        <label>Rent / Mortgage</label>
+                        <label>Monthly Rent / Mortgage</label>
                         <input type="number" id="rent" />
                     </div>
                     <div>
-                        <label>Utilities</label>
+                        <label>Monthly Utilities</label>
                         <input type="number" id="utilities" />
                     </div>
                     <div>
-                        <label>Internet</label>
+                        <label>Monthly Internet</label>
                         <input type="number" id="internet" />
                     </div>
                     <div>
-                        <label>Car Payment</label>
+                        <label>Monthly Car Payment</label>
                         <input type="number" id="carPayment" />
                     </div>
                     <div>
-                        <label>Car Insurance</label>
+                        <label>Monthly Car Insurance</label>
                         <input type="number" id="carInsurance" />
                     </div>
                     <div>
-                        <label>Gas / Transit</label>
+                        <label>Monthly Gas / Transit</label>
                         <input type="number" id="gas" />
                     </div>
                 </div>
@@ -244,27 +244,27 @@
             <div class="acc-body">
                 <div class="cb-row">
                     <div>
-                        <label>Groceries</label>
+                        <label>Monthly Groceries</label>
                         <input type="number" id="groceries" />
                     </div>
                     <div>
-                        <label>Dining / Coffee</label>
+                        <label>Monthly Dining / Coffee</label>
                         <input type="number" id="dining" />
                     </div>
                     <div>
-                        <label>Entertainment</label>
+                        <label>Monthly Entertainment</label>
                         <input type="number" id="entertainment" />
                     </div>
                     <div>
-                        <label>Shopping</label>
+                        <label>Monthly Shopping</label>
                         <input type="number" id="shopping" />
                     </div>
                     <div>
-                        <label>Phone Bill</label>
+                        <label>Monthly Phone Bill</label>
                         <input type="number" id="phone" />
                     </div>
                     <div>
-                        <label>Miscellaneous</label>
+                        <label>Monthly Miscellaneous</label>
                         <input type="number" id="misc" />
                     </div>
                 </div>
@@ -277,11 +277,11 @@
             <div class="acc-body">
                 <div class="cb-row">
                     <div>
-                        <label>Credit Card Minimums</label>
+                        <label>Monthly Credit Card Minimums</label>
                         <input type="number" id="ccMin" />
                     </div>
                     <div>
-                        <label>Loan Payments</label>
+                        <label>Monthly Loan Payments</label>
                         <input type="number" id="loans" />
                     </div>
                 </div>
