--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
 
   .wrap{ max-width:var(--content-w); margin:0 auto; padding:0 var(--pad-x); }
 
-  /* Header */
-  .site-header{
+  /*  */
+  .site-{
     position:fixed; inset-block-start:0; inset-inline:0;
     background:rgba(255,255,255,.9);
     border-bottom:1px solid var(--stroke);
     backdrop-filter: blur(8px);
     z-index:1000;
   }
-  @media (prefers-color-scheme: dark){ .site-header{ background: rgba(10,15,28,.7); } }
-  .header-inner{ min-height:60px; display:flex; align-items:center; justify-content:space-between; }
+  @media (prefers-color-scheme: dark){ .site-{ background: rgba(10,15,28,.7); } }
+  .-inner{ min-height:60px; display:flex; align-items:center; justify-content:space-between; }
   .brand{ color:var(--text); text-decoration:none; font-weight:800; font-size:20px; letter-spacing:.2px }
   .nav{ display:flex; gap:18px; align-items:center }
   .nav a{ color:inherit; text-decoration:none; font-weight:600; font-size:14px }
@@ -104,7 +104,7 @@
   /* Modal */
   .modal-backdrop{ position:fixed; inset:0; background:rgba(0,0,0,.35); display:none; align-items:center; justify-content:center; padding:20px; z-index:2000 }
   .modal{ background:var(--card); border:1px solid var(--stroke); border-radius:16px; box-shadow:0 18px 60px rgba(2,6,23,.2); max-width:640px; width:100%; overflow:hidden }
-  .modal header{ padding:16px 18px; border-bottom:1px solid var(--stroke); display:flex; align-items:center; justify-content:space-between }
+  .modal { padding:16px 18px; border-bottom:1px solid var(--stroke); display:flex; align-items:center; justify-content:space-between }
   .modal .content{ padding:18px }
   .close{ background:none; border:0; font-size:22px; cursor:pointer; color:var(--muted) }
 
@@ -120,15 +120,15 @@
 </head>
 <body>
 
-<header class="site-header">
+< class="site-">
   <div class="wrap header-inner">
     <a class="brand" href="index.html">stakxAi</a>
     <button class="nav-toggle" aria-expanded="false" aria-controls="nav">☰</button>
     <nav id="nav" class="nav" aria-label="Primary">
       <a href="retirement.html">Retirement Planner</a>
       <a href="budget/easy.html">Budget Tool</a>
-      <a href="questions.html">Healthcare Helper</a>
-      <a href="#community">Community</a>
+      <a href="questions.html">Healthcare Plan Options</a>
+      <a href="#community">Community Boards</a>
     </nav>
   </div>
 </header>
