--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="kicker">Rack your Stakx.</div>
       <h1 class="title">Build Wealth Together.</h1>
       <p class="sub">
-        Every tool here is 100% free and designed to help you understand money, save more, and grow wealth with confidence.
+        Every tool here is 100% free—no accounts, no subscriptions—just simple tools to help you be smarter about your money.
       </p>
 
       <div class="strip" role="status" aria-live="polite">
