--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
 
   .wrap{ max-width:var(--content-w); margin:0 auto; padding:0 var(--pad-x); }
 
-  /*  */
-  .site-{
+  /* Header */
+  .site-header{
     position:fixed; inset-block-start:0; inset-inline:0;
     background:rgba(255,255,255,.9);
     border-bottom:1px solid var(--stroke);
     backdrop-filter: blur(8px);
     z-index:1000;
   }
-  @media (prefers-color-scheme: dark){ .site-{ background: rgba(10,15,28,.7); } }
-  .-inner{ min-height:60px; display:flex; align-items:center; justify-content:space-between; }
+  @media (prefers-color-scheme: dark){ .site-header{ background: rgba(10,15,28,.7); } }
+  .header-inner{ min-height:60px; display:flex; align-items:center; justify-content:space-between; }
   .brand{ color:var(--text); text-decoration:none; font-weight:800; font-size:20px; letter-spacing:.2px }
   .nav{ display:flex; gap:18px; align-items:center }
   .nav a{ color:inherit; text-decoration:none; font-weight:600; font-size:14px }
@@ -120,7 +120,7 @@
 </head>
 <body>
 
-< class="site-">
+<header class="site-header">
   <div class="wrap header-inner">
     <a class="brand" href="index.html">stakxAi</a>
     <button class="nav-toggle" aria-expanded="false" aria-controls="nav">☰</button>
