--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
   <div class="wrap footer-row">
     <div>© <span id="year"></span> StakxAI • Free forever • <a href="#" class="muted" style="text-decoration:none">Mission</a></div>
     <div class="muted">Built with AI. Guided by the community.</div>
+    <div class="muted"> No data is collected by us. Data lives on your broswer and deleted when you shut it down.</div>
   </div>
 </footer>
 
