--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <section class="hero">
     <div class="wrap">
       <div class="kicker">Rack your Stakx.</div>
-      <h1 class="title">Build Wealth Together.</h1>
+      <h1 class="title">Use AI. Build Wealth Together.</h1>
       <p class="sub">
         Every tool here is 100% free—no accounts, no subscriptions—just simple tools to help you be smarter about your money.
       </p>
