--- a/retirement.html
+++ b/retirement.html
@@ -123,16 +123,20 @@
 
 <header class="site-header">
   <div class="cb-wrap header-inner">
-    <a class="brand" href="/index.html">stakxAi</a>
+    <a class="brand" href="index.html">stakxAi</a>
     <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Toggle navigation">☰</button>
     <nav id="primary-nav" class="nav-links">
-      <a href="/retirement.html">Retirement Planning</a>
-      <a href="/budget/easy.html">Budget Tool</a>
-      <a href="/questions.html">Healthcare Tool</a>
-      <a href="/community.html">Community Boards</a>
+      <!-- Optional explicit Home link: uncomment if you want it visible
+      <a href="index.html">Home</a>
+      -->
+      <a href="retirement.html">Retirement Planning</a>
+      <a href="budget/easy.html">Budget Tool</a>
+      <a href="questions.html">Healthcare Tool</a>
+      <a href="community.html">Community Boards</a>
     </nav>
   </div>
 </header>
+
 
 <!-- Top kicker + info strip -->
 <div class="cb-wrap">
