--- a/budget/easy.html
+++ b/budget/easy.html
@@ -10,105 +10,131 @@
 <script src="https://code.highcharts.com/highcharts.js"></script>
 
 <style>
-  /* ====== Global tokens ====== */
-  :root{
-    --bg:#f5f7fa; --card:#ffffff; --text:#1b1f3b; --muted:#6b7280;
-    --stroke:#d9dee7; --brand:#1a73e8; --brand-700:#0f5ad2; --brand-dark:#125ac0;
-    --soft:#f7f9ff; --radius:18px; --shadow:0 8px 24px rgba(0,0,0,0.06);
-    --pad-x:24px; --content-w:1200px;
+  /* ========= YOUR ORIGINAL TOKENS / PAGE STYLES (kept) ========= */
+  :root {
+    --bg:#f5f7fa;
+    --card:#ffffff;
+    --text:#1b1f3b;
+    --muted:#6b7280;
+    --stroke:#d9dee7;
+    --brand:#1a73e8;
+    --brand-dark:#125ac0;
+    --radius:18px;
+    --shadow:0 8px 24px rgba(0,0,0,0.06);
   }
 
-  /* ====== Base ====== */
-  * { box-sizing:border-box }
-  html, body { height:100% }
   body {
-    font-family:"Inter", sans-serif; margin:0; background:var(--bg); color:var(--text);
-    -webkit-tap-highlight-color:transparent; padding-top:70px; /* room for fixed header */
-  }
-  .cb-wrap { max-width: var(--content-w); margin: 0 auto; padding: 0 var(--pad-x); }
-
-  /* ====== Header (fixed, shared) ====== */
-  .site-header{
-    position:fixed; top:0; left:0; right:0; z-index:1000;
-    background:rgba(255,255,255,.9);
-    backdrop-filter:blur(8px);
-    border-bottom:1px solid var(--stroke);
-  }
-  .header-inner{ min-height:60px; display:flex; align-items:center; justify-content:space-between; }
-  .brand{ color:var(--text); text-decoration:none; font-weight:800; font-size:20px; letter-spacing:.2px }
-  .nav-links{ display:flex; gap:18px; align-items:center }
-  .nav-links a{ color:inherit; text-decoration:none; font-weight:600; font-size:14px }
-  .nav-links a:hover{ text-decoration:underline }
-  .nav-toggle{ display:none; border:0; background:none; font-size:26px; cursor:pointer }
-  @media (max-width:820px){
-    .nav-toggle{ display:block }
-    .nav-links{ display:none; position:absolute; right:var(--pad-x); top:60px; background:var(--card);
-      border:1px solid var(--stroke); border-radius:12px; box-shadow:0 8px 24px rgba(2,6,23,.15); padding:12px }
-    .nav-links.open{ display:block }
-    .nav-links a{ display:block; padding:8px 10px }
+    font-family:"Inter", sans-serif;
+    margin:0;
+    background:var(--bg);
+    color:var(--text);
+    padding-top: 86px; /* room for the fixed namespaced header */
   }
 
-  /* ====== Top kicker + info strip ====== */
-  .kicker{
-    font-weight:800; font-size:12px; letter-spacing:.12em; text-transform:uppercase;
-    color:var(--brand); margin:10px 0 8px 0;
+  .cb-wrap {
+    max-width: 900px;
+    margin:0 auto;
+    padding:0 20px 50px;
   }
-  .strip{
-    display:flex; align-items:center; gap:10px; background:var(--soft);
-    border:1px solid var(--stroke); border-radius:12px; padding:10px 12px;
-    color:#6b7280; font-size:13px;
-  }
-  .strip svg{ flex:0 0 auto }
 
-  /* ====== Page-specific (Snap Budget) ====== */
+  /* Accordion & form UI (unchanged) */
   .accordion { margin-top:20px; }
   .acc-item {
-    background:var(--card); border:1px solid var(--stroke); border-radius:var(--radius);
-    margin-bottom:14px; box-shadow:var(--shadow); overflow:hidden;
+    background:var(--card);
+    border:1px solid var(--stroke);
+    border-radius:var(--radius);
+    margin-bottom:14px;
+    box-shadow:var(--shadow);
+    overflow:hidden;
   }
   .acc-header {
-    padding:16px 20px; font-weight:700; cursor:pointer; display:flex; justify-content:space-between;
-    align-items:center; background:var(--card); font-size:17px;
+    padding:16px 20px;
+    font-weight:700;
+    cursor:pointer;
+    display:flex; justify-content:space-between; align-items:center;
+    background:var(--card); font-size:17px;
   }
   .acc-header:hover { background:#f0f2f8; }
+
   .acc-body { display:none; padding:20px; border-top:1px solid var(--stroke); background:var(--card); }
   .open .acc-body { display:block; }
 
   .cb-row { display:grid; grid-template-columns:1fr 1fr; gap:16px; }
-  @media(max-width:600px){ .cb-row { grid-template-columns:1fr; } }
+  @media(max-width:600px) { .cb-row { grid-template-columns:1fr; } }
 
   label { font-size:14px; font-weight:600; margin-bottom:4px; }
-  input[type="number"], input[type="text"]{
-    padding:12px 14px; font-size:16px; border-radius:12px; border:1px solid var(--stroke); width:100%; background:white;
+  input[type="number"], input[type="text"] {
+    padding:12px 14px; font-size:16px; border-radius:12px; border:1px solid var(--stroke);
+    width:100%; background:white;
   }
-  input[readonly]{ background:#f2f3f7; cursor:not-allowed; }
+  input[readonly] { background:#f2f3f7; cursor:not-allowed; }
 
-  .calculate-btn{
+  .calculate-btn {
     margin-top:20px; width:100%; padding:16px; font-size:18px; font-weight:700;
     background:var(--brand); color:#fff; border:none; border-radius:14px; cursor:pointer;
   }
-  .calculate-btn:hover{ background:var(--brand-dark); }
+  .calculate-btn:hover { background:var(--brand-dark); }
 
-  .results-box{
-    margin-top:30px; padding:20px; background:var(--card); border-radius:var(--radius);
-    border:1px solid var(--stroke); box-shadow:var(--shadow);
+  .results-box {
+    margin-top:30px; padding:20px; background:var(--card);
+    border-radius:var(--radius); border:1px solid var(--stroke); box-shadow:var(--shadow);
   }
-  #charts-wrapper{ margin-top:25px; display:grid; grid-template-columns:1fr 1fr; gap:20px; }
-  @media(max-width:850px){ #charts-wrapper { grid-template-columns:1fr; } }
-  #incomeVsExpenses, #categoryChart{ background:transparent; height:340px; }
 
+  #charts-wrapper {
+    margin-top:25px; display:grid; grid-template-columns:1fr 1fr; gap:20px;
+  }
+  @media(max-width:850px) { #charts-wrapper { grid-template-columns:1fr; } }
+
+  #incomeVsExpenses, #categoryChart { background:transparent; height:340px; }
   h2 { margin-top:0; }
+
+  /* ========= NEW, NAMESPACED HEADER + STRIP (won't override your classes) ========= */
+  :root{
+    --stk-pad-x:24px; --stk-stroke:#e5e9f2; --stk-card:#fff; --stk-text:#0a0f2c;
+    --stk-brand:#1a73e8; --stk-soft:#f7f9ff;
+  }
+  .stk-container { max-width: 1100px; margin:0 auto; padding:0 var(--stk-pad-x); }
+
+  .stk-header {
+    position: fixed; top:0; left:0; right:0; z-index:1000;
+    background: rgba(255,255,255,.9); backdrop-filter: blur(8px);
+    border-bottom:1px solid var(--stk-stroke);
+  }
+  .stk-header-inner { min-height:66px; display:flex; align-items:center; justify-content:space-between; }
+  .stk-brand { color:var(--stk-text); text-decoration:none; font-weight:800; font-size:20px; letter-spacing:.2px; }
+  .stk-nav { display:flex; gap:18px; align-items:center; }
+  .stk-nav a { color:inherit; text-decoration:none; font-weight:600; font-size:14px; }
+  .stk-nav a:hover { text-decoration:underline; }
+  .stk-toggle { display:none; border:0; background:none; font-size:26px; cursor:pointer; }
+
+  @media (max-width:820px){
+    .stk-toggle{ display:block; }
+    .stk-nav{
+      display:none; position:absolute; right:var(--stk-pad-x); top:66px; background:var(--stk-card);
+      border:1px solid var(--stk-stroke); border-radius:12px; box-shadow:0 8px 24px rgba(2,6,23,.15); padding:12px;
+    }
+    .stk-nav.open{ display:block; }
+    .stk-nav a{ display:block; padding:8px 10px; }
+  }
+
+  .stk-kicker { font-weight:800; font-size:12px; letter-spacing:.12em; text-transform:uppercase; color:var(--stk-brand); margin:12px 0 8px 0; }
+  .stk-strip {
+    display:flex; align-items:center; gap:10px; background:var(--stk-soft);
+    border:1px solid var(--stk-stroke); border-radius:12px; padding:10px 12px;
+    color:#6b7280; font-size:13px;
+  }
+  .stk-strip svg { flex:0 0 auto; }
 </style>
 </head>
 
 <body>
 
-  <!-- ===== Header ===== -->
-  <header class="site-header">
-    <div class="cb-wrap header-inner">
-      <a class="brand" href="index.html">stakxAi</a>
-      <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Toggle navigation">☰</button>
-      <nav id="primary-nav" class="nav-links" aria-label="Primary">
+  <!-- ===== Namespaced, fixed header (safe) ===== -->
+  <header class="stk-header">
+    <div class="stk-container stk-header-inner">
+      <a class="stk-brand" href="index.html">stakxAi</a>
+      <button class="stk-toggle" aria-expanded="false" aria-controls="stk-primary-nav" aria-label="Toggle navigation">☰</button>
+      <nav id="stk-primary-nav" class="stk-nav" aria-label="Primary">
         <a href="retirement.html">Retirement Planning</a>
         <a href="budget/easy.html">Budget Tool</a>
         <a href="questions.html">Healthcare Tool</a>
@@ -117,10 +143,10 @@
     </div>
   </header>
 
-  <!-- Kicker + Info strip -->
-  <div class="cb-wrap" style="margin-top:12px;">
-    <div class="kicker">Rack your Stakx.</div>
-    <div class="strip" role="status" aria-live="polite">
+  <!-- Top kicker + info strip (namespaced) -->
+  <div class="stk-container" style="margin-top:12px;">
+    <div class="stk-kicker">Rack your Stakx.</div>
+    <div class="stk-strip" role="status" aria-live="polite">
       <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
         <path fill="currentColor" d="M12 2a10 10 0 1 0 10 10A10.011 10.011 0 0 0 12 2Zm1 15h-2v-6h2Zm0-8h-2V7h2Z"/>
       </svg>
@@ -128,35 +154,22 @@
     </div>
   </div>
 
-  <!-- ===== Page content ===== -->
+  <!-- ===== Your page content (unchanged) ===== -->
   <div class="cb-wrap">
     <h1 style="margin-top:10px; font-size:32px; font-weight:800;">Snap Budget</h1>
     <p style="color:var(--muted); margin-bottom:25px;">A fast, simple breakdown of your money — with insights.</p>
 
     <!-- Accordion -->
     <div class="accordion">
-
       <!-- SECTION 1 — AGE & MONTHLY INCOME -->
       <div class="acc-item">
         <div class="acc-header">1. Age & Income <span>+</span></div>
         <div class="acc-body">
           <div class="cb-row">
-            <div>
-              <label>Current Age</label>
-              <input type="number" id="age" min="16" max="100" />
-            </div>
-            <div>
-              <label>Monthly Gross Income ($)</label>
-              <input type="number" id="grossIncome" />
-            </div>
-            <div>
-              <label>Monthly Taxes ($)</label>
-              <input type="number" id="taxes" />
-            </div>
-            <div>
-              <label>Monthly Net Income ($)</label>
-              <input type="number" id="netIncome" readonly />
-            </div>
+            <div><label>Current Age</label><input type="number" id="age" min="16" max="100" /></div>
+            <div><label>Monthly Gross Income ($)</label><input type="number" id="grossIncome" /></div>
+            <div><label>Monthly Taxes ($)</label><input type="number" id="taxes" /></div>
+            <div><label>Monthly Net Income ($)</label><input type="number" id="netIncome" readonly /></div>
           </div>
         </div>
       </div>
@@ -196,22 +209,10 @@
         <div class="acc-header">4. Debts <span>+</span></div>
         <div class="acc-body">
           <div class="cb-row">
-            <div>
-              <label>Monthly Credit Card Minimums</label>
-              <input type="number" id="ccMin" />
-            </div>
-            <div>
-              <label>Monthly Loan Payments</label>
-              <input type="number" id="loans" />
-            </div>
-            <div style="grid-column:1 / -1;">
-              <label>Total Credit Card Debt ($)</label>
-              <input type="number" id="ccTotal" />
-            </div>
-            <div style="grid-column:1 / -1;">
-              <label>Total Other Debt ($)</label>
-              <input type="number" id="otherDebt" />
-            </div>
+            <div><label>Monthly Credit Card Minimums</label><input type="number" id="ccMin" /></div>
+            <div><label>Monthly Loan Payments</label><input type="number" id="loans" /></div>
+            <div style="grid-column:1 / -1;"><label>Total Credit Card Debt ($)</label><input type="number" id="ccTotal" /></div>
+            <div style="grid-column:1 / -1;"><label>Total Other Debt ($)</label><input type="number" id="otherDebt" /></div>
           </div>
         </div>
       </div>
@@ -238,11 +239,11 @@
             <div><label>Total Balance</label><input type="number" id="save_total" /></div>
           </div>
 
-          <h3>Bonds / Securities / Crypto</h3>
-          <div class="cb-row">
-            <div><label>Monthly Contribution</label><input type="number" id="inv_month" /></div>
-            <div><label>Total Balance</label><input type="number" id="inv_total" /></div>
-          </div>
+            <h3>Bonds / Securities / Crypto</h3>
+            <div class="cb-row">
+              <div><label>Monthly Contribution</label><input type="number" id="inv_month" /></div>
+              <div><label>Total Balance</label><input type="number" id="inv_total" /></div>
+            </div>
         </div>
       </div>
 
@@ -265,10 +266,10 @@
   </div>
 
 <script>
-  // ===== Mobile nav toggle (single instance) =====
+  /* Mobile nav (namespaced) */
   document.addEventListener('DOMContentLoaded', () => {
-    const btn = document.querySelector('.nav-toggle');
-    const nav = document.getElementById('primary-nav');
+    const btn = document.querySelector('.stk-toggle');
+    const nav = document.getElementById('stk-primary-nav');
     if (!btn || !nav) return;
     btn.addEventListener('click', () => {
       const opened = nav.classList.toggle('open');
@@ -276,7 +277,7 @@
     });
   });
 
-  // ===== Accordion =====
+  /* Accordion */
   document.querySelectorAll('.acc-header').forEach(header=>{
     header.addEventListener('click', ()=>{
       const item = header.parentElement;
@@ -285,7 +286,7 @@
     });
   });
 
-  // ===== Auto-calc net income =====
+  /* Auto-calc net income */
   const grossEl = document.getElementById("grossIncome");
   const taxEl = document.getElementById("taxes");
   const netEl = document.getElementById("netIncome");
@@ -297,11 +298,10 @@
   grossEl.addEventListener("input", updateNet);
   taxEl.addEventListener("input", updateNet);
 
-  // ===== Main Calculate =====
+  /* Main Calculate */
   document.getElementById("calculateBtn").addEventListener("click", ()=>{
     const income = Number(netEl.value||0);
 
-    /* Expenses */
     const expenses = {
       Rent: Number(rent.value||0),
       Utilities: Number(utilities.value||0),
@@ -321,7 +321,6 @@
 
     const totalExpenses = Object.values(expenses).reduce((a,b)=>a+b,0);
 
-    /* Charts */
     Highcharts.chart("incomeVsExpenses", {
       chart:{ type:"column", backgroundColor:"transparent" },
       title:{ text:"Income vs Expenses" },
@@ -346,7 +345,6 @@
       credits:{ enabled:false }
     });
 
-    /* Insights */
     const insights = [];
 
     const totalDebt =
@@ -386,13 +384,12 @@
       insights.push("✅ Your spending profile looks well-balanced.");
     }
 
-    document.getElementById("insights").innerHTML =
-      insights.map(i=>`<p>${i}</p>`).join("");
-
+    document.getElementById("insights").innerHTML = insights.map(i=>`<p>${i}</p>`).join("");
     document.getElementById("results").style.display = "block";
   });
 </script>
 
 </body>
 </html>
+
 
