--- a/budget/easy.html
+++ b/budget/easy.html
@@ -129,30 +129,46 @@
 
 <body>
 
-  <!-- ===== Header (links wired by JS below) ===== -->
-  <header class="stk-header">
-    <div class="stk-container stk-header-inner">
-      <a class="stk-brand" data-link="home" href="#">stakxAi</a>
-      <button class="stk-toggle" aria-expanded="false" aria-controls="stk-primary-nav" aria-label="Toggle navigation">☰</button>
-      <nav id="stk-primary-nav" class="stk-nav" aria-label="Primary">
-        <a data-link="retirement" href="#">Retirement Planning</a>
-        <a data-link="budget" href="#">Budget Tool</a>
-        <a data-link="health" href="#">Healthcare Tool</a>
-        <a data-link="community" href="#">Community Boards</a>
-      </nav>
-    </div>
-  </header>
+ <header class="stk-header">
+  <div class="stk-container stk-header-inner">
+    <!-- brand goes to root index -->
+    <a class="stk-brand" href="../index.html">stakxAi</a>
 
-  <!-- Top kicker + info strip -->
-  <div class="stk-container" style="margin-top:12px;">
-    <div class="stk-kicker">Rack your Stakx.</div>
-    <div class="stk-strip" role="status" aria-live="polite">
-      <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
-        <path fill="currentColor" d="M12 2a10 10 0 1 0 10 10A10.011 10.011 0 0 0 12 2Zm1 15h-2v-6h2Zm0-8h-2V7h2Z"/>
-      </svg>
-      Free forever. No login required. No data is collected by us. Data lives on your broswer and deleted when you shut it down.
-    </div>
+    <button class="stk-toggle" aria-expanded="false" aria-controls="stk-primary-nav" aria-label="Toggle navigation">☰</button>
+
+    <nav id="stk-primary-nav" class="stk-nav" aria-label="Primary">
+      <!-- all targets are at the root, so prefix ../ from /budget/easy.html -->
+      <a href="../retirement.html">Retirement Planning</a>
+      <a href="./easy.html">Budget Tool</a>
+      <a href="../questions.html">Healthcare Tool</a>
+      <a href="../community.html">Community Boards</a>
+    </nav>
   </div>
+</header>
+
+<!-- Keep your existing kicker + strip below -->
+<div class="stk-container" style="margin-top:12px;">
+  <div class="stk-kicker">Rack your Stakx.</div>
+  <div class="stk-strip" role="status" aria-live="polite">
+    <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
+      <path fill="currentColor" d="M12 2a10 10 0 1 0 10 10A10.011 10.011 0 0 0 12 2Zm1 15h-2v-6h2Zm0-8h-2V7h2Z"/>
+    </svg>
+    Free forever. No login required. No data is collected by us. Data lives on your broswer and deleted when you shut it down.
+  </div>
+</div>
+
+<script>
+  // Mobile nav toggle (namespaced)
+  document.addEventListener('DOMContentLoaded', () => {
+    const btn = document.querySelector('.stk-toggle');
+    const nav = document.getElementById('stk-primary-nav');
+    if (!btn || !nav) return;
+    btn.addEventListener('click', () => {
+      const opened = nav.classList.toggle('open');
+      btn.setAttribute('aria-expanded', opened ? 'true' : 'false');
+    });
+  });
+</script>
 
   <!-- ===== Page content (unchanged) ===== -->
   <div class="cb-wrap">
