--- a/questions.html
+++ b/questions.html
@@ -9,15 +9,127 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <style>
+    :root {
+      --pad-x:24px;
+      --stroke:#e5e9f2;
+      --card:#fff;
+      --text:#0a0f2c;
+      --brand:#1a73e8;
+      --brand-700:#0f5ad2;
+      --soft:#f7f9ff;
+    }
+
     body {
       font-family: 'Inter', sans-serif;
       background: #f7f9fc;
       margin: 0;
-      padding: 40px 16px;
+      color: var(--text);
+      padding-top: 80px;
       display: flex;
       justify-content: center;
     }
 
+    /* Layout helper */
+    .stk-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 var(--pad-x);
+    }
+
+    /* Header */
+    .stk-header {
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      z-index: 1000;
+      background: rgba(255,255,255,0.9);
+      border-bottom: 1px solid var(--stroke);
+      backdrop-filter: blur(8px);
+    }
+
+    .stk-header-inner {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      min-height: 60px;
+    }
+
+    .stk-brand {
+      color: var(--text);
+      text-decoration: none;
+      font-weight: 800;
+      font-size: 20px;
+      letter-spacing: .2px;
+    }
+
+    .stk-nav {
+      display: flex;
+      gap: 18px;
+      align-items: center;
+    }
+
+    .stk-nav a {
+      color: inherit;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 14px;
+    }
+
+    .stk-nav a:hover {
+      text-decoration: underline;
+    }
+
+    .stk-toggle {
+      display: none;
+      border: 0;
+      background: none;
+      font-size: 26px;
+      cursor: pointer;
+    }
+
+    @media (max-width: 820px) {
+      .stk-toggle { display: block; }
+      .stk-nav {
+        display: none;
+        position: absolute;
+        right: var(--pad-x);
+        top: 60px;
+        background: var(--card);
+        border: 1px solid var(--stroke);
+        border-radius: 12px;
+        box-shadow: 0 8px 24px rgba(2,6,23,.15);
+        padding: 12px;
+      }
+      .stk-nav.open { display: block; }
+      .stk-nav a { display: block; padding: 8px 10px; }
+    }
+
+    /* Top kicker + info strip */
+    .stk-kicker {
+      font-weight: 800;
+      font-size: 12px;
+      letter-spacing: .12em;
+      text-transform: uppercase;
+      color: var(--brand);
+      margin: 10px 0 8px 0;
+    }
+
+    .stk-strip {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      background: var(--soft);
+      border: 1px solid var(--stroke);
+      border-radius: 12px;
+      padding: 10px 12px;
+      color: #6b7280;
+      font-size: 13px;
+    }
+
+    .stk-strip svg {
+      flex: 0 0 auto;
+    }
+
+    /* Wizard styles */
     .wizard {
       background: white;
       width: 100%;
@@ -65,10 +177,6 @@
       margin-top: 12px;
     }
 
-    .hidden {
-      display: none;
-    }
-
     .small {
       font-size: 12px;
       color: #6b7280;
@@ -78,133 +186,155 @@
 
 <body>
 
-<div class="wizard">
-  <h1>Healthcare Questionnaire</h1>
-  <p class="small">Your answers are NOT saved. They only live in your browser temporarily.</p>
+  <!-- Header -->
+  <header class="stk-header">
+    <div class="stk-container stk-header-inner">
+      <a class="stk-brand" href="index.html">stakxAi</a>
+      <button class="stk-toggle" aria-expanded="false" aria-controls="stk-primary-nav" aria-label="Toggle navigation">☰</button>
+      <nav id="stk-primary-nav" class="stk-nav" aria-label="Primary">
+        <a href="retirement.html">Retirement Planning</a>
+        <a href="budget/easy.html">Budget Tool</a>
+        <a href="questions.html">Healthcare Tool</a>
+        <a href="community.html">Community Boards</a>
+      </nav>
+    </div>
+  </header>
 
-  <!-- STEP 1 -->
-  <div class="step active" id="step1">
-    <h2>Step 1: About You</h2>
-    <label>Age</label>
-    <input id="age" type="number" placeholder="e.g., 45" />
-
-    <label>ZIP Code</label>
-    <input id="zip" placeholder="12345" />
-
-    <div class="nav-buttons">
-      <span></span>
-      <button onclick="nextStep()">Next</button>
+  <!-- Top info strip -->
+  <div class="stk-container" style="margin-top:12px;">
+    <div class="stk-kicker">Rack your Stakx.</div>
+    <div class="stk-strip" role="status" aria-live="polite">
+      <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
+        <path fill="currentColor" d="M12 2a10 10 0 1 0 10 10A10.011 10.011 0 0 0 12 2Zm1 15h-2v-6h2Zm0-8h-2V7h2Z"/>
+      </svg>
+      Free forever. No login required. No data is collected by us. Data lives on your browser and is deleted when you shut it down.
     </div>
   </div>
 
-  <!-- STEP 2 -->
-  <div class="step" id="step2">
-    <h2>Step 2: Coverage Status</h2>
+  <!-- Wizard body -->
+  <div class="wizard">
+    <h1>Healthcare Questionnaire</h1>
+    <p class="small">Your answers are NOT saved. They only live in your browser temporarily.</p>
 
-    <label>Current Coverage</label>
-    <select id="coverage">
-      <option value="none">No current coverage</option>
-      <option value="employer">Employer coverage</option>
-      <option value="medicare">Medicare</option>
-      <option value="medicaid">Medicaid</option>
-      <option value="cobra">COBRA</option>
-    </select>
+    <!-- STEP 1 -->
+    <div class="step active" id="step1">
+      <h2>Step 1: About You</h2>
+      <label>Age</label>
+      <input id="age" type="number" placeholder="e.g., 45" />
 
-    <div class="nav-buttons">
-      <button onclick="prevStep()">Back</button>
-      <button onclick="nextStep()">Next</button>
+      <label>ZIP Code</label>
+      <input id="zip" placeholder="12345" />
+
+      <div class="nav-buttons">
+        <span></span>
+        <button onclick="nextStep()">Next</button>
+      </div>
+    </div>
+
+    <!-- STEP 2 -->
+    <div class="step" id="step2">
+      <h2>Step 2: Coverage Status</h2>
+
+      <label>Current Coverage</label>
+      <select id="coverage">
+        <option value="none">No current coverage</option>
+        <option value="employer">Employer coverage</option>
+        <option value="medicare">Medicare</option>
+        <option value="medicaid">Medicaid</option>
+        <option value="cobra">COBRA</option>
+      </select>
+
+      <div class="nav-buttons">
+        <button onclick="prevStep()">Back</button>
+        <button onclick="nextStep()">Next</button>
+      </div>
+    </div>
+
+    <!-- STEP 3 -->
+    <div class="step" id="step3">
+      <h2>Step 3: Household Info</h2>
+
+      <label>Household Income</label>
+      <input id="income" type="number" placeholder="e.g., 54000" />
+
+      <label>Household Size</label>
+      <input id="hhSize" type="number" placeholder="e.g., 2" />
+
+      <div class="nav-buttons">
+        <button onclick="prevStep()">Back</button>
+        <button onclick="nextStep()">Next</button>
+      </div>
+    </div>
+
+    <!-- STEP 4 -->
+    <div class="step" id="step4">
+      <h2>Step 4: Preferences</h2>
+
+      <label>Preferred Pharmacy</label>
+      <select id="pharmacy">
+        <option value="preferred">Preferred retail</option>
+        <option value="standard">Standard retail</option>
+        <option value="mail">Mail order</option>
+      </select>
+
+      <label>Do you use prescription medications?</label>
+      <select id="usesDrugs">
+        <option value="no">No</option>
+        <option value="yes">Yes</option>
+      </select>
+
+      <div class="nav-buttons">
+        <button onclick="prevStep()">Back</button>
+        <button onclick="nextStep()">Next</button>
+      </div>
+    </div>
+
+    <!-- STEP 5 -->
+    <div class="step" id="step5">
+      <h2>All Set!</h2>
+      <p>Click below to see suggested plans based on your answers.</p>
+      <button onclick="goToPlans()">See My Plans</button>
+      <div class="nav-buttons">
+        <button onclick="prevStep()">Back</button>
+        <span></span>
+      </div>
     </div>
   </div>
 
-  <!-- STEP 3 -->
-  <div class="step" id="step3">
-    <h2>Step 3: Household Info</h2>
+  <!-- JS -->
+  <script>
+    // Mobile nav toggle
+    document.addEventListener('DOMContentLoaded', () => {
+      const btn = document.querySelector('.stk-toggle');
+      const nav = document.getElementById('stk-primary-nav');
+      if (!btn || !nav) return;
+      btn.addEventListener('click', () => {
+        const opened = nav.classList.toggle('open');
+        btn.setAttribute('aria-expanded', opened ? 'true' : 'false');
+      });
+    });
 
-    <label>Household Income</label>
-    <input id="income" type="number" placeholder="e.g., 54000" />
+    let current = 1;
+    function showStep(n) {
+      document.querySelectorAll(".step").forEach(s => s.classList.remove("active"));
+      document.getElementById("step" + n).classList.add("active");
+    }
+    function nextStep() { if (current < 5) current++; showStep(current); }
+    function prevStep() { if (current > 1) current--; showStep(current); }
 
-    <label>Household Size</label>
-    <input id="hhSize" type="number" placeholder="e.g., 2" />
-
-    <div class="nav-buttons">
-      <button onclick="prevStep()">Back</button>
-      <button onclick="nextStep()">Next</button>
-    </div>
-  </div>
-
-  <!-- STEP 4 -->
-  <div class="step" id="step4">
-    <h2>Step 4: Preferences</h2>
-
-    <label>Preferred Pharmacy</label>
-    <select id="pharmacy">
-      <option value="preferred">Preferred retail</option>
-      <option value="standard">Standard retail</option>
-      <option value="mail">Mail order</option>
-    </select>
-
-    <label>Do you use prescription medications?</label>
-    <select id="usesDrugs">
-      <option value="no">No</option>
-      <option value="yes">Yes</option>
-    </select>
-
-    <div class="nav-buttons">
-      <button onclick="prevStep()">Back</button>
-      <button onclick="nextStep()">Next</button>
-    </div>
-  </div>
-
-  <!-- STEP 5 -->
-  <div class="step" id="step5">
-    <h2>All Set!</h2>
-    <p>Click below to see suggested plans based on your answers.</p>
-
-    <button onclick="goToPlans()">See My Plans</button>
-
-    <div class="nav-buttons">
-      <button onclick="prevStep()">Back</button>
-      <span></span>
-    </div>
-  </div>
-</div>
-
-<script>
-let current = 1;
-
-function showStep(n) {
-  document.querySelectorAll(".step").forEach(s => s.classList.remove("active"));
-  document.getElementById("step" + n).classList.add("active");
-}
-
-function nextStep() {
-  if (current < 5) current++;
-  showStep(current);
-}
-
-function prevStep() {
-  if (current > 1) current--;
-  showStep(current);
-}
-
-function goToPlans() {
-  // User answer object (lives only in browser memory)
-  const answers = {
-    age: document.getElementById("age").value,
-    zip: document.getElementById("zip").value,
-    coverage: document.getElementById("coverage").value,
-    income: document.getElementById("income").value,
-    hhSize: document.getElementById("hhSize").value,
-    pharmacy: document.getElementById("pharmacy").value,
-    usesDrugs: document.getElementById("usesDrugs").value
-  };
-
-  // Pass answers through the URL (safe + ephemeral)
-  const query = new URLSearchParams(answers).toString();
-
-  window.location.href = "plans.html?" + query;
-}
-</script>
-
+    function goToPlans() {
+      const answers = {
+        age: document.getElementById("age").value,
+        zip: document.getElementById("zip").value,
+        coverage: document.getElementById("coverage").value,
+        income: document.getElementById("income").value,
+        hhSize: document.getElementById("hhSize").value,
+        pharmacy: document.getElementById("pharmacy").value,
+        usesDrugs: document.getElementById("usesDrugs").value
+      };
+      const query = new URLSearchParams(answers).toString();
+      window.location.href = "plans.html?" + query;
+    }
+  </script>
 </body>
 </html>
