--- a/questions.html
+++ b/questions.html
@@ -17,19 +17,22 @@
       --brand:#1a73e8;
       --brand-700:#0f5ad2;
       --soft:#f7f9ff;
+      --muted:#6b7280;
     }
 
+    /* Global */
+    * , *::before, *::after { box-sizing: border-box; }
+    html, body { height: 100%; }
     body {
       font-family: 'Inter', sans-serif;
       background: #f7f9fc;
-      margin: 0;
       color: var(--text);
+      margin: 0;
+      /* Room for fixed header */
       padding-top: 80px;
-      display: flex;
-      justify-content: center;
     }
 
-    /* Layout helper */
+    /* Layout helper for page sections */
     .stk-container {
       max-width: 1200px;
       margin: 0 auto;
@@ -45,14 +48,12 @@
       border-bottom: 1px solid var(--stroke);
       backdrop-filter: blur(8px);
     }
-
     .stk-header-inner {
       display: flex;
       align-items: center;
       justify-content: space-between;
       min-height: 60px;
     }
-
     .stk-brand {
       color: var(--text);
       text-decoration: none;
@@ -60,24 +61,18 @@
       font-size: 20px;
       letter-spacing: .2px;
     }
-
     .stk-nav {
       display: flex;
       gap: 18px;
       align-items: center;
     }
-
     .stk-nav a {
       color: inherit;
       text-decoration: none;
       font-weight: 600;
       font-size: 14px;
     }
-
-    .stk-nav a:hover {
-      text-decoration: underline;
-    }
-
+    .stk-nav a:hover { text-decoration: underline; }
     .stk-toggle {
       display: none;
       border: 0;
@@ -85,7 +80,6 @@
       font-size: 26px;
       cursor: pointer;
     }
-
     @media (max-width: 820px) {
       .stk-toggle { display: block; }
       .stk-nav {
@@ -112,7 +106,6 @@
       color: var(--brand);
       margin: 10px 0 8px 0;
     }
-
     .stk-strip {
       display: flex;
       align-items: center;
@@ -121,19 +114,17 @@
       border: 1px solid var(--stroke);
       border-radius: 12px;
       padding: 10px 12px;
-      color: #6b7280;
+      color: var(--muted);
       font-size: 13px;
     }
+    .stk-strip svg { flex: 0 0 auto; }
 
-    .stk-strip svg {
-      flex: 0 0 auto;
-    }
-
-    /* Wizard styles */
+    /* Wizard card */
     .wizard {
       background: white;
       width: 100%;
       max-width: 600px;
+      margin: 24px auto;     /* centers the card */
       padding: 30px;
       border-radius: 16px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.1);
@@ -149,7 +140,6 @@
       font-weight: 600;
       margin-bottom: 6px;
     }
-
     input, select, button {
       width: 100%;
       padding: 12px;
@@ -158,7 +148,6 @@
       border-radius: 12px;
       border: 1px solid #d5d9e2;
     }
-
     button {
       background: #1a73e8;
       color: white;
@@ -166,21 +155,16 @@
       cursor: pointer;
       border: none;
     }
-
-    button:hover {
-      background: #0f5ad2;
-    }
+    button:hover { background: #0f5ad2; }
 
     .nav-buttons {
       display: flex;
       justify-content: space-between;
+      gap: 12px;
       margin-top: 12px;
     }
 
-    .small {
-      font-size: 12px;
-      color: #6b7280;
-    }
+    .small { font-size: 12px; color: var(--muted); }
   </style>
 </head>
 
@@ -293,7 +277,9 @@
     <div class="step" id="step5">
       <h2>All Set!</h2>
       <p>Click below to see suggested plans based on your answers.</p>
+
       <button onclick="goToPlans()">See My Plans</button>
+
       <div class="nav-buttons">
         <button onclick="prevStep()">Back</button>
         <span></span>
@@ -314,6 +300,7 @@
       });
     });
 
+    // Wizard logic
     let current = 1;
     function showStep(n) {
       document.querySelectorAll(".step").forEach(s => s.classList.remove("active"));
